fix share to user text in dark mode

--- a/frontend/src/components/user-item/index.css
+++ b/frontend/src/components/user-item/index.css
@@ -25,7 +25,7 @@
 
 .user-item .user-name {
   margin-left: 5px;
-  color: #212529;
+  color: var(--bs-body-color);
 }
 
 .user-item .user-avatar img {
